--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>UdemyCourse</title>
+    <title><%= content_for?(:page_title) ? yield(:page_title) : "Ruby on Rails Blog" %> | Rails App</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -15,11 +15,19 @@
     <div class="container">
       <div class="row">
         <div class="col">
+          <%= render partial: "layouts/menu" %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
           <%= yield %>
         </div>
       </div>
     </div>
     
     <%= render partial: "layouts/footer" %>
+
+    <%= yield(:scripts) if content_for?(:scripts)%>
   </body>
 </html>
