--- a/app/views/public/homepage.html.erb
+++ b/app/views/public/homepage.html.erb
@@ -1,1 +1,12 @@
-hello homepage
+
+<% content_for :page_title, "Home"  %>
+
+<h2>Latest Posts</h2>
+
+<% @posts.each do |post| %>
+  <%= render partial: "posts/post", locals: { post: post} %>
+<% end %>
+
+<% content_for :scripts do  %>
+  This will be displayed at the bottom of the body tag
+<% end %>
