--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,2 +1,2 @@
-  <h3><%= link_to post.title, post_path(post) %></h3>
+  <p class="h5"><%= link_to post.title, post_path(post) %></p>
   <p><%= post.summary %></p>
