--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,4 +1,4 @@
-<h1 class="float-left">Rails Blog</h1>
+<h1 class="float-left" id="site-name">Rails Blog</h1>
 
 <ul class="float-right" class="list-unstyled" id="topnav">
   <li><%= link_to "Home", root_path %></li>
