--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,8 @@
 
 <h1><%= @post.title %></h1>
 
+<%= @post.details %>
+
+<p>Total entries for Posts: <%= Post.total  %></p>
+
 <%= simple_format @post.body %>
