--- a/app/views/public/homepage.html.erb
+++ b/app/views/public/homepage.html.erb
@@ -12,6 +12,7 @@
     <p class="h4">About</p>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et praesentium perferendis architecto quae magni assumenda non delectus maiores, facere totam unde iste nostrum sapiente! Est dicta dignissimos possimus culpa fuga!</p>
   
+  <%= image_tag "image.jpg", alt: "blog image", class: "img-fluid mt-2 mb-2", style: "border-radius: 6px " %>
   
   <p class="h4">categories</p> 
   <% @categories.each do |category| %>
