page viewcount tracker and fix category counter error

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,9 @@
 
 <h1><%= @post.title %></h1>
-
+<p><small><%= post_meta @post %></small></p>
 
 <%= @post.details %>
-
 <p>Total entries for Posts: <%= Post.total  %></p>
-
 <%= simple_format @post.body %>
+
+<%= render partial: "posts/view_form", locals: { post: @post } %>
